@@ -1,3 +1,10 @@
+2002-08-09  Lars Munch  <lars@segv.dk>
+
+	* include/commctrl.h (tagTVHITTESTINFO): Replace obsolete
+	struct name _TVHITTESTINFO and typedefs and add defines for
+	backward coapatability.
+	(ListView_SetExtendedListViewStyleEx): Add macro.
+
 2002-08-05  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/wingdi.h (AlphaBlend,GradientFill,TransparentBlt):
